--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="refresh" content="5;url=https://github.com/rack/rack" />
 	</head>
 	<body style="height: 100vh; display: flex; align-items: center; justify-content: center; flex-direction: column">
-		<img src="logo.png" style="max-width: 500px; width: 80vw"/>
+		<img src="logo.png" style="max-width: 500px; width: 80vw">
 		<a href="https://github.com/rack/rack">github.com/rack/rack</a>
 	</body>
 </html>
